<resources>
    <string name="app_name">Abercrombie\u0026Fitch</string>

    <string name="action_settings">Settings</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis nunc massa, quis suscipit orci mattis a. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum</string>


      <string name="shop_data">
            m153.243347,49.422333c-47.767944,0
          -86.491028,38.722824 -86.491028,86.500122c0,47.773186 38.726807,86.500008 86.500008,86.500008c47.773186,0 86.500008,-38.726807 86.500008,-86.500008c-0.00032,-47.777298 -38.740921,-86.500122 -86.508987,-86.500122zm7.464752,133.396057v12.18285h-11.653158v-12.045964c-19.122362,-2.618688 -27.502174,-18.330814 -27.502174,-18.330814l11.915028,-9.956964c0,0 7.594195,13.230326 21.342297,13.230326c7.594195,0 13.355309,-4.064917 13.355309,-11.004438c0,-16.241819 -43.738018,-14.271852 -43.738018,-44.392696c0,-13.093442 10.343814,-22.526653 24.621613,-24.752546v-12.180469h11.653158v12.1769c9.951014,1.309344 21.735102,6.54672 21.735102,17.813028v8.641669h-15.450258v-4.1899c0,-4.320835 -5.505194,-7.201392 -11.659113,-7.201392c-7.856064,0 -13.617179,3.928032 -13.617179,9.427276c0,16.628668 43.738018,12.569705 43.738018,44.130829c0.015205,12.966711 -9.683586,24.227331 -24.740623,26.452307z
    </string>

    <string name="star_lollipop">
            M 223.42,133.484
            C 237.895,98.1973 280.378,100.58 295.49,133.484
            C 302.176,148.044 293.576,165.914 270.253,183.357
            C 264.16,187.914 268.606,245.136 268.606,248.852
            C 268.606,256.589 268.606,295.171 268.606,302.907
            C 268.606,322.848 268.606,329.725 268.606,339.649
            C 268.606,347.385 255.048,349.681 255.048,339.649
            C 255.048,331.913 255.361,310.637 255.048,302.907
            C 254.579,291.371 255.048,256.788 255.048,249.052
            C 255.048,238.561 254.706,187.75 248.302,183.489
            C 221.536,165.677 218.848,144.628 223.42,133.484 z
    </string>

    <string name="up">up</string>
    <string name="transition_toolbar">ToolbarTransition</string>
    <string name="transition_background">BackgroundTransition</string>

    <string name="drawer_author">Jumbo Chu</string>
    <string name="drawer_shop">SHOP</string>
    <string name="drawer_my_account">MY ACCOUNT</string>
    <string name="drawer_my_saves">MY SAVES</string>
    <string name="drawer_policy_terms">Policy and Terms</string>
    <string name="drawer_help">Help</string>
    <string name="footer_text">Fiexed Footer</string>

</resources>
