<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".NavigationDrawerFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_drawer_af"
            />

        <jumbo.com.smalldemoaf.custom_views.LobsterTextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/gradient_dark"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:text="@string/drawer_author"
            android:textSize="25sp"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFF"
            android:gravity="bottom"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/fragment_nav_drawer_shop"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_shop_drawer"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:text="@string/drawer_shop"
        />

    <TextView
        android:id="@+id/fragment_nav_drawer_my_count"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_my_count"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:tag="bookings"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:text="@string/drawer_my_account"
        />

    <TextView
        android:id="@+id/fragment_nav_drawer_saves"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_saves"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:tag="bookings"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:text="@string/drawer_my_saves"
        />

    <TextView
        android:id="@+id/fragment_nav_drawer_p_t"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:tag="bookings"
        android:textColor="#FFF"
        android:text="@string/drawer_policy_terms"
        />


    <TextView
        android:id="@+id/fragment_nav_drawer_help"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:tag="bookings"
        android:textColor="#FFF"
        android:text="@string/drawer_help"
        />

</LinearLayout>
